Pipelines/k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: walking-skeleton-app
  labels:
    app: walking-skeleton-app
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: walking-skeleton-app
  template:
    metadata:
      labels:
        app: walking-skeleton-app
    spec:
      containers:
        - name: walking-skeleton
          image: johnmorsley/walking-skeleton
