Pipelines/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: walking-skeletion-svc
spec:
  type: LoadBalancer
  selector:
    app: walking-skeletion-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
